flaws were fixed

--- a/app/src/main/res/layout/layout_2_11.xml
+++ b/app/src/main/res/layout/layout_2_11.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
-        android:layout_weight="1"
+        app:layout_constraintHorizontal_weight="1"
         android:gravity="center"
         android:text="@string/app_name"
         app:layout_constraintEnd_toStartOf="@id/view2"
@@ -26,7 +26,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
-        android:layout_weight="1"
+        app:layout_constraintHorizontal_weight="1"
         android:backgroundTint="@color/black"
         android:gravity="center"
         android:text="@string/text"
@@ -41,7 +41,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="150dp"
         android:layout_marginBottom="5dp"
-        android:layout_weight="1"
+        app:layout_constraintHorizontal_weight="1"
         android:contentDescription="@string/image"
         android:src="@drawable/ic_launcher_background"
         app:layout_constraintEnd_toEndOf="parent"
